// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": false, "nextButtonDisabled": false} 1`] = `
<div
  className="insights-dialog-next-and-back-container"
>
  <div>
    <CustomizedDefaultButton
      data-automation-id="back"
      onClick={[Function]}
      text="< Back"
    />
  </div>
  <div />
  <div>
    <CustomizedDefaultButton
      data-automation-id="next"
      onClick={[Function]}
      text="Next >"
    />
  </div>
</div>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": false, "nextButtonDisabled": true} 1`] = `
<div
  className="insights-dialog-next-and-back-container"
>
  <div>
    <CustomizedDefaultButton
      data-automation-id="back"
      onClick={[Function]}
      text="< Back"
    />
  </div>
  <div />
  <div />
</div>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": true, "nextButtonDisabled": false} 1`] = `
<div
  className="insights-dialog-next-and-back-container"
>
  <div />
  <div />
  <div>
    <CustomizedDefaultButton
      data-automation-id="next"
      onClick={[Function]}
      text="Next >"
    />
  </div>
</div>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": true, "nextButtonDisabled": true} 1`] = `
<div
  className="insights-dialog-next-and-back-container"
>
  <div />
  <div />
  <div />
</div>
`;

exports[`IssueDetailsNavigationControls render handles failures count 0 failures 1`] = `null`;

exports[`IssueDetailsNavigationControls render handles failures count 1 failure 1`] = `null`;

exports[`IssueDetailsNavigationControls render handles failures count multiple failures 1`] = `
<div
  className="insights-dialog-next-and-back-container"
>
  <div>
    <CustomizedDefaultButton
      data-automation-id="back"
      onClick={[Function]}
      text="< Back"
    />
  </div>
  <div />
  <div>
    <CustomizedDefaultButton
      data-automation-id="next"
      onClick={[Function]}
      text="Next >"
    />
  </div>
</div>
`;
